[package]
name = "psiri-aes"
version = "0.1.0"

[dependencies]
lambdaworks_math = { git = "https://github.com/lambdaclass/lambdaworks.git", package = "lambdaworks-math" }
aes = "0.8.4"
sha2 = "0.10.8"
rand = "0.8"

[[bin]]
name = "test_prg"

[[bin]]
name = "test_two_key_prp"

[[bin]]
name = "test_ccrh"

[[bin]]
name = "test_aes"
