[package]
name = "psiri-okvs"
version = "0.1.0"

[dependencies]
psiri-aes = { workspace = true }
lambdaworks_math = { git = "https://github.com/lambdaclass/lambdaworks.git", package = "lambdaworks-math" }
sp-core = "26.0"
thiserror = "1.0"
aes-gcm = "0.10"
sha3 = "0.10.8"
rand = "0.8"
rayon = { version = "1.10", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[[bin]]
name = "test_rb_okvs"