[package]
name = "psiri-vole"
version = "0.1.0"

[lib]
name = "psiri_vole"
path = "src/lib.rs"

[dependencies]
psiri-okvs = { workspace = true }
psiri-aes = { workspace = true }
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git", package = "lambdaworks-math" }
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks.git", package = "lambdaworks-crypto", features = ["parallel"], optional = true}
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", package = "stark-platinum-prover"}
rand = "0.8"
tokio = { version = "1", features = ["full"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
sha3 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = { version = "1.10", optional = true }
clap = "4.5.28"
libc = "0.2"

[features]
default = ["parallel"]
parallel = ["dep:rayon", "dep:lambdaworks-crypto"]

[[bin]]
name = "sender_ot"

[[bin]]
name = "receiver_ot"

[[bin]]
name = "sender_cope"

[[bin]]
name = "receiver_cope"

[[bin]]
name = "test_field"

[[bin]]
name = "receiver_tcp"

[[bin]]
name = "sender_tcp"

[[bin]]
name = "sender_base_svole"

[[bin]]
name = "receiver_base_svole"

[[bin]]
name = "sender_iknp"

[[bin]]
name = "receiver_iknp"

[[bin]]
name = "test_mul"

[[bin]]
name = "sender_base_cot"

[[bin]]
name = "receiver_base_cot"

[[bin]]
name = "sender_spfss"

[[bin]]
name = "receiver_spfss"

[[bin]]
name = "sender_mpfss"

[[bin]]
name = "receiver_mpfss"

[[bin]]
name = "sender_vole_triple"

[[bin]]
name = "receiver_vole_triple"

[[bin]]
name = "test_block"

[[bin]]
name = "test_fri"

[[bin]]
name = "oprf"

[[bin]]
name = "test_rayon"

[[bin]]
name = "test_fft"